Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33063

The qt debugger starts up slowly.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 18.0.0
    • Qt Creator 17.0.0-beta2
    • Debugger
    • None
    • Windows
    • e05dacfb0 (master)

      According to the sharing of relevant customers, the slow startup of Debuger is caused by the lag due to the global lock race issue of QTextCodec, which is manifested as the lag in process interaction communication. QTextCodec is no longer obsolete in Qt6. It is recommended to modify it.

        For Gerrit Dashboard: QTCREATORBUG-33063
        # Subject Branch Project Status CR V

            hjk hjk
            junchong.tang Junchong Tang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes