Debugger: Use QStringDecoder instead of (deprecated) QTextCodec

Fixes: QTCREATORBUG-33063
Change-Id: I0ea186ab0d2f1a149813c752d0953628c84ee8b4
Reviewed-by: David Schulz <david.schulz@qt.io>